<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sascha.mealdecisionhelper.MainActivity"
    android:background="@drawable/bg_gradient">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="MealDecisionHelper"
        android:textColor="#fff"
        android:textSize="32dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rezeptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="#40ffffff"
        android:text="@string/recipe"
        android:textColor="#ffffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/shoppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rezeptButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="#40ffffff"
        android:text="@string/shoppingList"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="v0.2"
        android:textColor="#ffffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/optionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rezeptButton"
        android:layout_alignStart="@+id/rezeptButton"
        android:layout_below="@+id/shoppingButton"
        android:layout_marginTop="75dp"
        android:background="#40ffffff"
        android:text="@string/options"
        android:textColor="#ffffffff" />


</RelativeLayout>
